[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "keys-yocto"
dependencies = ["pyside6", "rsa"]
requires-python = ">=3.8"
authors = [{name = "Delvian Valentine", email = "delvian.valentine@gmail.com"}]
description = "Make licence keys using RSA signature verification"
readme = "README.md"
keywords = ["licence", "license", "key", "rsa"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License (GPL)",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Topic :: Software Development",
]
dynamic = ["version"]

[project.gui-scripts]
keys-yocto = "keys.ui:main"

[project.urls]
Repository = "https://github.com/delvianv/keys"

[tool.setuptools.dynamic]
version = {attr = "keys.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"keys.data" = ["ui/*", "icons/*"]

[tool.pyright]
reportGeneralTypeIssues = "none"
